# split-happens

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.sh  example_handler.json  log.txt  split_happens_big_picture.sh  treuhandtina-applogs.txt  tyde-applogs.txt
debug/: NemirtingasEpicEmu.json  applogs.txt  launch_warnings.txt  partydeck.txt  treuhandtina-client-applogs.txt  tyde-host-applogs.txt
debug/aktuelle-config/: readme.txt
debug/aktuelle-config/coral gbe/steam_settings/: configs.user.ini  steam_appid.txt  steam_interfaces.txt
debug/aktuelle-config/coral nemirtingas/Win64/nepice_settings/: applogs.txt
debug/aktuelle-config/coral profiles/tyde/steam/settings/: configs.user.ini
debug/treuhandtina/nepice_settings/: NemirtingasEpicEmu.json  applogs.txt
debug/treuhandtina/steam/settings/: account_name.txt  configs.main.ini  configs.user.ini  user_steam_id.txt
debug/tyde/nepice_settings/: NemirtingasEpicEmu.json  applogs.txt
debug/tyde/saves/secretsofgrindeablkink/: readme.txt
debug/tyde/steam/settings/: account_name.txt  configs.main.ini  configs.user.ini  gc_token.txt  user_steam_id.txt
docs/: coral_island_multiplayer.md  nemirtingas_profiles.md
res/: splitscreen_kwin.js  splitscreen_kwin_vertical.js
src/: game.rs  handler.rs  input.rs  instance.rs  launch.rs  main.rs  paths.rs
src/app/: app.rs  app_light.rs  character_creator.rs  config.rs  gui_pages.rs  gui_panels.rs  mod.rs  theme.rs
src/util/: filesystem.rs  hash.rs  lock.rs  mod.rs  profiles.rs  proton.rs  steamdeck.rs  sys.rs  updates.rs
(+127 files in other folders)
