[package]
name = "partydeck"
version = "0.6.2"
edition = "2024"

[dependencies]
dialog = "0.3.0"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["file", "image", "svg"] }
env_logger = "0.11.7"
evdev = "=0.13.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
rand = "0.9.0"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
walkdir = "2.5.0"
x11rb = "0.13.1"
zbus = "5.5.0"
zip = { version = "2.6.1", default-features = false, features = ["aes-crypto", "deflate", "deflate64", "time"] }
steamlocate = "2.0.1"
semver = "1.0.26"
sha1 = "0.10"
fs2 = "0.4"
ctrlc = "3.4"
nix = { version = "0.28", features = ["sched", "signal"] }
